--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chengyu-test</title>
-    <style>
-        body{
-            background-color: black;
-            color:#ffffff;
-        }
-    </style>
+    
 </head>
-<body>
+<body bgcolor="yellow">
     <p>hello world</p>  
 </body>
 </html>
