--- a/首页面/index.html
+++ b/首页面/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <p>这是首页面</p>
-    <img src="images/u=2069006154,1053672607&fm=26&gp=0.jpg">
+    <img src="images/src=http___compimg.go007.com_TestPic_Big_2017_1_10_9_20170110698478308.png&refer=http___compimg.go007.jpg">
 </body>
 </html>
